[package]
name = "apultra"
version = "0.1.0"
authors = ["Aaron Myles Landwehr <snaphat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty="0.2"
libffi = { version = "1", features = ["system"] }
thiserror= "1"

[build-dependencies]
cc = "1"
